# schelme

./: .gitignore  LICENSE  README.md  elm.json
examples/basic-eval/src/: Main.elm
examples/bots/: botcode.schelme  build-elm.sh  elm.json  watch-elm.sh
examples/bots/server/: Cargo.toml  config.toml  debugrun.sh  ns.sh  prodrun.sh  rustfmt.toml  shell.nix
examples/bots/server/src/: main.rs  process_json.rs  util.rs
examples/bots/server/static/: index.html  localvals.js
examples/bots/src/: BotGame.elm  BotLang.elm  Main.elm  PublicInterface.elm  Select.elm  SelectString.elm
examples/side-effect/src/: Main.elm
examples/step/src/: Main.elm
examples/steps/: elm.json
examples/steps/src/: Main.elm
regular/examples/basic-eval/src/: Main.elm
regular/examples/side-effect/: elm.json
regular/src/: Prelude.elm
src/: Eval.elm  EvalStep.elm  EvalStepImpl.elm  ParseHelp.elm  Prelude.elm  PreludeStep.elm  Run.elm  SExpression.elm  Schelm.elm  ShowStep.elm  StateGet.elm  StateSet.elm  Util.elm
src/Schelme/: Eval.elm  EvalStep.elm  ParseHelp.elm  Prelude.elm  Run.elm  SExpression.elm  Show.elm  StateGet.elm  StateSet.elm  Util.elm
stepwise/: elm.json
stepwise/examples/bots/: elm.json
stepwise/examples/bots/src/: Main.elm
stepwise/examples/step/src/: Main.elm
stepwise/src/: Eval.elm  EvalStep.elm  Prelude.elm  Run.elm  RunStep.elm  SExpression.elm  Show.elm  StateGet.elm  StateSet.elm  Util.elm
