[package]
name = "server"
version = "0.1.0"
authors = ["Ben Burdette <bburdette@gmail.com>"]

[dependencies]
env_logger = "0.5.13"
log = "0.4.0"
actix = "0.7.5"
actix-web = { version = "0.7.13", features = ["ssl"] }
futures = "0.1.25"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
failure = "0.1.1"
lettre = "0.8"
lettre_email = "0.8"
uuid = { version = "0.6", features = ["v4"] }
crypto-hash = "0.3.1"
time = "0.1"
rand = "0.5.0"
toml = "0.4.8"
openssl = { version="0.10" }
